--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description":"GateWatch (https://gatewatch.de) API client for node",
     "version":"0.2.1",
     "author":"Hinnerk Haardt",
+    "email": "hinnerk@randnotizen.de",
     "keywords":["gatewatch"],
     "dependencies":{
         "request":"2.9.x"
