--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "request":"2.9.x"
     },
     "engines":{
-        "node":"0.6.x - 0.8.x"
+        "node":">=0.6"
     },
     "main": "./lib/gatewatch",
     "repository": {
